[project]
name = "draw_down"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Canwaiting",email = "455021735@qq.com"},
]
dependencies = [
    "rich>=13.7.1",
    "requests>=2.32.3",
    "gspread>=6.1.2",
    "oauth2client>=4.1.3",
    "pyinstaller>=6.8.0",
    "pyqt5>=5.15.10",
    "sip>=6.8.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
